# SpamBeater

./: .gitignore  pyproject.toml  resnet50.ipynb
spambeater/: .env.example  bot.py  bot_types.py  config.py  keyboards.py  logger.py  normalization.py  tasks.py
spambeater/antispam/: image.py  predict_model.py  text.py
spambeater/db/: manager.py
spambeater/normalization/: image.py  text.py
