[tool.poetry]
name = "spambeater"
version = "0.1.0"
description = ""
authors = ["Max <avdeenkomaxim123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
python-dotenv = "^1.0.0"
tgcrypto = "^1.2.5"
uvloop = "^0.19.0"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
