[tool.poetry]
name = "spambeater"
version = "0.1.0"
description = ""
authors = ["Max <avdeenkomaxim123@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyrogram = "^2.0.106"
python-dotenv = "^1.0.0"
tgcrypto = "^1.2.5"
uvloop = "^0.19.0"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
imageio = "^2.34.1"
imageio-ffmpeg = "^0.4.9"
joblib = "^1.3.2"
pandas = "^2.1.2"
gensim = "^4.3.2"
nltk = "^3.8.1"
scikit-learn = "1.3.2"
scipy = "1.9.3"
keras = "3.3.3"
tensorflow = "^2.16.1"
celery = "^5.4.0"
redis = "^5.0.4"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
